--- a/index.html
+++ b/index.html
@@ -1,125 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shreya M | Resume</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Shreya M | Resume</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<header>
-  <h1>Shreya M</h1>
-  <p>Aspiring Software Developer | BCA Student</p>
-</header>
+<div class="resume">
 
-<div class="main">
-
-  <!-- SIDE / TOP MENU -->
-  <div class="menu">
-    <button class="active" onclick="showSection('skills',this)">Skills</button>
-    <button onclick="showSection('education',this)">Education</button>
-    <button onclick="showSection('internship',this)">Internship</button>
-    <button onclick="showSection('projects',this)">Projects</button>
-    <button onclick="showSection('certifications',this)">Certifications</button>
-  </div>
-
-  <!-- CONTENT -->
-  <div class="content">
-
-    <div class="section active" id="skills">
-      <div class="box">
-        <h2>Skills</h2>
-        <ul>
-          <li>HTML5 & CSS3 (Responsive Design)</li>
-          <li>Basic JavaScript</li>
-          <li>Python Programming</li>
-          <li>Git & GitHub</li>
-          <li>AWS Cloud Basics</li>
-          <li>Problem Solving Skills</li>
-        </ul>
-      </div>
+    <!-- HEADER -->
+    <div class="header">
+        <h1>SHREYA M</h1>
     </div>
 
-    <div class="section" id="education">
-      <div class="box">
-        <h2>Education</h2>
-        <ul>
-          <li>Bachelor of Computer Applications (BCA)</li>
-          <li>Programming & Web Technologies</li>
-          <li>Hands-on Lab Experience</li>
-          <li>Mini Academic Projects</li>
-          <li>Strong Technical Foundation</li>
-          <li>Focused on Software Development</li>
-        </ul>
-      </div>
+    <!-- MAIN CONTENT -->
+    <div class="content">
+
+        <!-- LEFT COLUMN -->
+        <div class="left">
+
+            <section>
+                <h2>CONTACT</h2>
+                <p>📞 7019484188</p>
+                <p>✉️ shreyaa4287@gmail.com</p>
+                <p>📍 Dommasandra, Bangalore</p>
+            </section>
+
+            <section>
+                <h2>EDUCATION</h2>
+                <p><strong>Bachelor of Computer Applications (BCA)</strong></p>
+                <p>Indus Valley Degree College</p>
+                <p>Bangalore – 36</p>
+                <p>2023 – 2026</p>
+            </section>
+
+            <section>
+                <h2>SKILLS</h2>
+                <ul>
+                    <li>Communication</li>
+                    <li>Teamwork</li>
+                    <li>Problem Solving</li>
+                    <li>Adaptability</li>
+                    <li>Time Management</li>
+                    <li>Positive Attitude</li>
+                    <li>Leadership</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>LANGUAGES</h2>
+                <ul>
+                    <li>English</li>
+                    <li>Kannada</li>
+                </ul>
+            </section>
+
+        </div>
+
+        <!-- RIGHT COLUMN -->
+        <div class="right">
+
+            <section>
+                <h2>SUMMARY</h2>
+                <p>
+                    Hardworking and quick learner with good communication and teamwork skills.
+                    Able to solve problems, adapt to new situations, and complete tasks on time.
+                    Enthusiastic and motivated to learn and contribute effectively.
+                </p>
+            </section>
+
+            <section>
+                <h2>CERTIFICATES</h2>
+                <ul>
+                    <li>NSS (National Service Scheme)</li>
+                    <li>Cloud Computing – Course Completion</li>
+                    <li>Soft Skill Training – Magic Bus Foundation</li>
+                    <li>Sports Certificate (Athletics)</li>
+                    <li>Python – Dream a Dream Foundation</li>
+                    <li>Workshop on AI & Data Science</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>CLOUD COMPUTING PROJECTS</h2>
+                <ul>
+                    <li>Worked on cloud projects using AWS and Python</li>
+                    <li>Used EC2 to run applications</li>
+                    <li>Stored data in Amazon S3</li>
+                    <li>Used Python for automation</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>CAREER OBJECTIVE</h2>
+                <p>
+                    To begin my career in a reputable organization where I can develop my skills,
+                    gain knowledge, and grow both professionally and personally.
+                </p>
+            </section>
+
+        </div>
+
     </div>
-
-    <div class="section" id="internship">
-      <div class="box">
-        <h2>Internship</h2>
-        <ul>
-          <li>IMTDA Infotech Private Limited</li>
-          <li>Resume & Portfolio Website</li>
-          <li>HTML & CSS Practical Work</li>
-          <li>Professional Workflow Exposure</li>
-          <li>Team Collaboration</li>
-          <li>Industry Learning Experience</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="section" id="projects">
-      <div class="box">
-        <h2>Projects</h2>
-        <ul>
-          <li>Personal Resume Website</li>
-          <li>Portfolio Website</li>
-          <li>Responsive Web Pages</li>
-          <li>GitHub Pages Hosting</li>
-          <li>Clean UI Design</li>
-          <li>User-Friendly Layout</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="section" id="certifications">
-      <div class="box">
-        <h2>Certifications</h2>
-        <ul>
-          <li>AWS Cloud Basics</li>
-          <li>Web Development Fundamentals</li>
-          <li>HTML & CSS Certification</li>
-          <li>GitHub Basics</li>
-          <li>Cloud Computing Introduction</li>
-          <li>Soft Skills Training</li>
-        </ul>
-      </div>
-    </div>
-
-  </div>
-
-  <footer>
-    Company Name: <span>IMTDA Infotech Private Limited</span>
-  </footer>
-
 </div>
-
-<script>
-function showSection(id, btn) {
-  document.querySelectorAll('.section').forEach(sec => {
-    sec.classList.remove('active');
-  });
-  document.getElementById(id).classList.add('active');
-
-  document.querySelectorAll('.menu button').forEach(b => {
-    b.classList.remove('active');
-  });
-  btn.classList.add('active');
-}
-</script>
 
 </body>
 </html>
-
