--- a/index.html
+++ b/index.html
@@ -1,109 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Shreya M | Resume</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Shreya M | Resume</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="resume">
 
-    <!-- HEADER -->
-    <div class="header">
-        <h1>SHREYA M</h1>
+  <div class="header">
+    <h1>SHREYA M</h1>
+    <p>Aspiring Software Developer | BCA Student</p>
+  </div>
+
+  <div class="content">
+
+    <div class="left">
+      <section>
+        <h2>CONTACT</h2>
+        <p>📞 7019484188</p>
+        <p>✉️ shreyaa4287@gmail.com</p>
+        <p>📍 Bangalore</p>
+      </section>
+
+      <section>
+        <h2>EDUCATION</h2>
+        <p><b>BCA</b></p>
+        <p>Indus Valley Degree College</p>
+        <p>2023 – 2026</p>
+      </section>
+
+      <section>
+        <h2>SKILLS</h2>
+        <ul>
+          <li>Communication</li>
+          <li>Teamwork</li>
+          <li>Problem Solving</li>
+          <li>Adaptability</li>
+          <li>Time Management</li>
+          <li>Leadership</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>LANGUAGES</h2>
+        <ul>
+          <li>English</li>
+          <li>Kannada</li>
+        </ul>
+      </section>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div class="content">
+    <div class="right">
+      <section>
+        <h2>SUMMARY</h2>
+        <p>
+          Hardworking and quick learner with strong communication and teamwork skills.
+          Motivated to learn new technologies and contribute effectively.
+        </p>
+      </section>
 
-        <!-- LEFT COLUMN -->
-        <div class="left">
+      <section>
+        <h2>CERTIFICATIONS</h2>
+        <ul>
+          <li>NSS – National Service Scheme</li>
+          <li>AWS Cloud Basics</li>
+          <li>Python Training</li>
+          <li>Soft Skills – Magic Bus</li>
+          <li>AI & Data Science Workshop</li>
+          <li>Sports Certificate</li>
+        </ul>
+      </section>
 
-            <section>
-                <h2>CONTACT</h2>
-                <p>📞 7019484188</p>
-                <p>✉️ shreyaa4287@gmail.com</p>
-                <p>📍 Dommasandra, Bangalore</p>
-            </section>
+      <section>
+        <h2>CLOUD PROJECTS</h2>
+        <ul>
+          <li>AWS EC2 application hosting</li>
+          <li>Amazon S3 storage</li>
+          <li>Python automation scripts</li>
+        </ul>
+      </section>
 
-            <section>
-                <h2>EDUCATION</h2>
-                <p><strong>Bachelor of Computer Applications (BCA)</strong></p>
-                <p>Indus Valley Degree College</p>
-                <p>Bangalore – 36</p>
-                <p>2023 – 2026</p>
-            </section>
-
-            <section>
-                <h2>SKILLS</h2>
-                <ul>
-                    <li>Communication</li>
-                    <li>Teamwork</li>
-                    <li>Problem Solving</li>
-                    <li>Adaptability</li>
-                    <li>Time Management</li>
-                    <li>Positive Attitude</li>
-                    <li>Leadership</li>
-                </ul>
-            </section>
-
-            <section>
-                <h2>LANGUAGES</h2>
-                <ul>
-                    <li>English</li>
-                    <li>Kannada</li>
-                </ul>
-            </section>
-
-        </div>
-
-        <!-- RIGHT COLUMN -->
-        <div class="right">
-
-            <section>
-                <h2>SUMMARY</h2>
-                <p>
-                    Hardworking and quick learner with good communication and teamwork skills.
-                    Able to solve problems, adapt to new situations, and complete tasks on time.
-                    Enthusiastic and motivated to learn and contribute effectively.
-                </p>
-            </section>
-
-            <section>
-                <h2>CERTIFICATES</h2>
-                <ul>
-                    <li>NSS (National Service Scheme)</li>
-                    <li>Cloud Computing – Course Completion</li>
-                    <li>Soft Skill Training – Magic Bus Foundation</li>
-                    <li>Sports Certificate (Athletics)</li>
-                    <li>Python – Dream a Dream Foundation</li>
-                    <li>Workshop on AI & Data Science</li>
-                </ul>
-            </section>
-
-            <section>
-                <h2>CLOUD COMPUTING PROJECTS</h2>
-                <ul>
-                    <li>Worked on cloud projects using AWS and Python</li>
-                    <li>Used EC2 to run applications</li>
-                    <li>Stored data in Amazon S3</li>
-                    <li>Used Python for automation</li>
-                </ul>
-            </section>
-
-            <section>
-                <h2>CAREER OBJECTIVE</h2>
-                <p>
-                    To begin my career in a reputable organization where I can develop my skills,
-                    gain knowledge, and grow both professionally and personally.
-                </p>
-            </section>
-
-        </div>
-
+      <section>
+        <h2>CAREER OBJECTIVE</h2>
+        <p>
+          To start my career in a reputed organization where I can enhance my skills
+          and grow professionally.
+        </p>
+      </section>
     </div>
+
+  </div>
+
+  <footer>
+    Company: <b>IMTDA Infotech Private Limited</b>
+  </footer>
+
 </div>
 
 </body>
 </html>
+
+
+
