--- a/index.html
+++ b/index.html
@@ -1,106 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Shreya M | Resume</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Shreya M | Resume</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="resume">
+<div class="container">
 
-  <div class="header">
-    <h1>SHREYA M</h1>
-    <p>Aspiring Software Developer | BCA Student</p>
-  </div>
+    <!-- Header -->
+    <div class="header">
+        <img src="profile.jpg" alt="Profile Photo">
+        <h1>SHREYA M</h1>
+        <p>Bachelor of Computer Applications (BCA)</p>
+    </div>
 
-  <div class="content">
+    <!-- Contact & Summary -->
+    <div class="row">
+        <div class="box">
+            <h2>Contact</h2>
+            <p>📞 7019484188</p>
+            <p>📧 shreya24287@gmail.com</p>
+            <p>📍 Bangalore, Karnataka</p>
+        </div>
 
-    <div class="left">
-      <section>
-        <h2>CONTACT</h2>
-        <p>📞 7019484188</p>
-        <p>✉️ shreyaa4287@gmail.com</p>
-        <p>📍 Bangalore</p>
-      </section>
+        <div class="box">
+            <h2>Summary</h2>
+            <p>
+                Hardworking and quick learner with good communication and teamwork skills.
+                Able to solve problems, adapt to new situations, and complete tasks on time.
+            </p>
+        </div>
+    </div>
 
-      <section>
-        <h2>EDUCATION</h2>
-        <p><b>BCA</b></p>
-        <p>Indus Valley Degree College</p>
+    <!-- Education -->
+    <div class="section">
+        <h2>Education</h2>
+        <p><strong>Bachelor of Computer Applications (BCA)</strong></p>
+        <p>Indus Valley Degree College, Bangalore</p>
         <p>2023 – 2026</p>
-      </section>
-
-      <section>
-        <h2>SKILLS</h2>
-        <ul>
-          <li>Communication</li>
-          <li>Teamwork</li>
-          <li>Problem Solving</li>
-          <li>Adaptability</li>
-          <li>Time Management</li>
-          <li>Leadership</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>LANGUAGES</h2>
-        <ul>
-          <li>English</li>
-          <li>Kannada</li>
-        </ul>
-      </section>
     </div>
 
-    <div class="right">
-      <section>
-        <h2>SUMMARY</h2>
-        <p>
-          Hardworking and quick learner with strong communication and teamwork skills.
-          Motivated to learn new technologies and contribute effectively.
-        </p>
-      </section>
-
-      <section>
-        <h2>CERTIFICATIONS</h2>
-        <ul>
-          <li>NSS – National Service Scheme</li>
-          <li>AWS Cloud Basics</li>
-          <li>Python Training</li>
-          <li>Soft Skills – Magic Bus</li>
-          <li>AI & Data Science Workshop</li>
-          <li>Sports Certificate</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>CLOUD PROJECTS</h2>
-        <ul>
-          <li>AWS EC2 application hosting</li>
-          <li>Amazon S3 storage</li>
-          <li>Python automation scripts</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>CAREER OBJECTIVE</h2>
-        <p>
-          To start my career in a reputed organization where I can enhance my skills
-          and grow professionally.
-        </p>
-      </section>
+    <!-- Skills -->
+    <div class="section">
+        <h2>Skills</h2>
+        <div class="skills">
+            <span>Communication</span>
+            <span>Teamwork</span>
+            <span>Problem Solving</span>
+            <span>Adaptability</span>
+            <span>Time Management</span>
+            <span>Leadership</span>
+        </div>
     </div>
 
-  </div>
+    <!-- Certificates -->
+    <div class="section">
+        <h2>Certificates</h2>
+        <ul>
+            <li>NSS – National Service Scheme</li>
+            <li>Cloud Computing Course</li>
+            <li>Soft Skills – Magic Bus</li>
+            <li>Python – Dream a Dream Foundation</li>
+            <li>AI & Data Science Workshop</li>
+        </ul>
+    </div>
 
-  <footer>
-    Company: <b>IMTDA Infotech Private Limited</b>
-  </footer>
+    <!-- Projects -->
+    <div class="section">
+        <h2>Cloud Computing Projects</h2>
+        <ul>
+            <li>AWS cloud projects using Python</li>
+            <li>EC2 for application hosting</li>
+            <li>Amazon S3 for storage</li>
+            <li>Python automation scripts</li>
+        </ul>
+    </div>
+
+    <!-- Languages -->
+    <div class="section">
+        <h2>Languages</h2>
+        <ul>
+            <li>English</li>
+            <li>Kannada</li>
+        </ul>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+        Company Name: <strong>IMTDA Infotech Private Limited</strong>
+    </div>
 
 </div>
 
 </body>
 </html>
-
-
-
