--- a/index.html
+++ b/index.html
@@ -12,79 +12,104 @@
     <!-- Header -->
     <div class="header">
         <img src="profile.jpg" alt="Profile Photo">
-        <h1>SHREYA M</h1>
-        <p>Bachelor of Computer Applications (BCA)</p>
+        <h1>Shreya M</h1>
+        <p>BCA Student | Cloud & Python Learner</p>
     </div>
 
-    <!-- Contact & Summary -->
-    <div class="row">
-        <div class="box">
-            <h2>Contact</h2>
+    <div class="content">
+
+        <!-- LEFT -->
+        <div class="left">
+            <h3>Contact</h3>
             <p>📞 7019484188</p>
             <p>📧 shreya24287@gmail.com</p>
-            <p>📍 Bangalore, Karnataka</p>
+            <p>📍 Bangalore – 560049</p>
+
+            <h3>Languages</h3>
+            <p>English</p>
+            <p>Kannada</p>
         </div>
 
-        <div class="box">
-            <h2>Summary</h2>
-            <p>
-                Hardworking and quick learner with good communication and teamwork skills.
-                Able to solve problems, adapt to new situations, and complete tasks on time.
-            </p>
+        <!-- RIGHT -->
+        <div class="right">
+
+            <!-- Summary -->
+            <div class="accordion">
+                <input type="checkbox" id="summary">
+                <label for="summary">Summary</label>
+                <div class="panel">
+                    <p>
+                        Hardworking and quick learner with good communication and teamwork skills.
+                        Able to adapt to new situations, solve problems, and complete tasks on time.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Education -->
+            <div class="accordion">
+                <input type="checkbox" id="education">
+                <label for="education">Education</label>
+                <div class="panel">
+                    <p><strong>BCA</strong> – Indus Valley Degree College</p>
+                    <p>2023 – 2026</p>
+                </div>
+            </div>
+
+            <!-- Skills -->
+            <div class="accordion">
+                <input type="checkbox" id="skills">
+                <label for="skills">Skills</label>
+                <div class="panel">
+                    <ul>
+                        <li>Communication</li>
+                        <li>Teamwork</li>
+                        <li>Problem Solving</li>
+                        <li>Time Management</li>
+                        <li>Leadership</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Certifications -->
+            <div class="accordion">
+                <input type="checkbox" id="certs">
+                <label for="certs">Certifications</label>
+                <div class="panel">
+                    <ul>
+                        <li>NSS – National Service Scheme</li>
+                        <li>Cloud Computing</li>
+                        <li>Python – Dream a Dream Foundation</li>
+                        <li>AI & Data Science Workshop</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Projects -->
+            <div class="accordion">
+                <input type="checkbox" id="projects">
+                <label for="projects">Cloud Projects (AWS & Python)</label>
+                <div class="panel">
+                    <ul>
+                        <li>AWS EC2 hosting</li>
+                        <li>Amazon S3 storage</li>
+                        <li>Python automation</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Objective -->
+            <div class="accordion">
+                <input type="checkbox" id="objective">
+                <label for="objective">Career Objective</label>
+                <div class="panel">
+                    <p>
+                        To begin my career in a reputable organization where I can develop my skills
+                        and grow professionally and personally.
+                    </p>
+                </div>
+            </div>
+
         </div>
-    </div>
-
-    <!-- Education -->
-    <div class="section">
-        <h2>Education</h2>
-        <p><strong>Bachelor of Computer Applications (BCA)</strong></p>
-        <p>Indus Valley Degree College, Bangalore</p>
-        <p>2023 – 2026</p>
-    </div>
-
-    <!-- Skills -->
-    <div class="section">
-        <h2>Skills</h2>
-        <div class="skills">
-            <span>Communication</span>
-            <span>Teamwork</span>
-            <span>Problem Solving</span>
-            <span>Adaptability</span>
-            <span>Time Management</span>
-            <span>Leadership</span>
-        </div>
-    </div>
-
-    <!-- Certificates -->
-    <div class="section">
-        <h2>Certificates</h2>
-        <ul>
-            <li>NSS – National Service Scheme</li>
-            <li>Cloud Computing Course</li>
-            <li>Soft Skills – Magic Bus</li>
-            <li>Python – Dream a Dream Foundation</li>
-            <li>AI & Data Science Workshop</li>
-        </ul>
-    </div>
-
-    <!-- Projects -->
-    <div class="section">
-        <h2>Cloud Computing Projects</h2>
-        <ul>
-            <li>AWS cloud projects using Python</li>
-            <li>EC2 for application hosting</li>
-            <li>Amazon S3 for storage</li>
-            <li>Python automation scripts</li>
-        </ul>
-    </div>
-
-    <!-- Languages -->
-    <div class="section">
-        <h2>Languages</h2>
-        <ul>
-            <li>English</li>
-            <li>Kannada</li>
-        </ul>
     </div>
 
     <!-- Footer -->
