--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
     <div class="content">
 
-        <!-- LEFT -->
+        <!-- Left Section -->
         <div class="left">
             <h3>Contact</h3>
-            <p>📞 7019484186</p>
-            <p>📧 shreyaa4287@gmail.com</p>
+            <p>📞 7019484188</p>
+            <p>📧 shreya24287@gmail.com</p>
             <p>📍 Bangalore – 560049</p>
 
             <h3>Languages</h3>
@@ -30,22 +30,20 @@
             <p>Kannada</p>
         </div>
 
-        <!-- RIGHT -->
+        <!-- Right Section -->
         <div class="right">
 
-            <!-- Summary -->
             <div class="accordion">
                 <input type="checkbox" id="summary">
-                <label for="summary">Summary</label>
+                <label for="summary">Profile</label>
                 <div class="panel">
                     <p>
                         Hardworking and quick learner with good communication and teamwork skills.
-                        Able to adapt to new situations, solve problems, and complete tasks on time.
+                        Able to adapt to new situations and complete tasks on time.
                     </p>
                 </div>
             </div>
 
-            <!-- Education -->
             <div class="accordion">
                 <input type="checkbox" id="education">
                 <label for="education">Education</label>
@@ -55,7 +53,6 @@
                 </div>
             </div>
 
-            <!-- Skills -->
             <div class="accordion">
                 <input type="checkbox" id="skills">
                 <label for="skills">Skills</label>
@@ -64,16 +61,15 @@
                         <li>Communication</li>
                         <li>Teamwork</li>
                         <li>Problem Solving</li>
+                        <li>Adaptability</li>
                         <li>Time Management</li>
-                        <li>Leadership</li>
                     </ul>
                 </div>
             </div>
 
-            <!-- Certifications -->
             <div class="accordion">
-                <input type="checkbox" id="certs">
-                <label for="certs">Certifications</label>
+                <input type="checkbox" id="certificates">
+                <label for="certificates">Certificates</label>
                 <div class="panel">
                     <ul>
                         <li>NSS – National Service Scheme</li>
@@ -84,27 +80,25 @@
                 </div>
             </div>
 
-            <!-- Projects -->
             <div class="accordion">
                 <input type="checkbox" id="projects">
-                <label for="projects">Cloud Projects (AWS & Python)</label>
+                <label for="projects">Cloud Projects</label>
                 <div class="panel">
                     <ul>
-                        <li>AWS EC2 hosting</li>
-                        <li>Amazon S3 storage</li>
-                        <li>Python automation</li>
+                        <li>AWS EC2 Hosting</li>
+                        <li>Amazon S3 Storage</li>
+                        <li>Python Automation</li>
                     </ul>
                 </div>
             </div>
 
-            <!-- Objective -->
             <div class="accordion">
                 <input type="checkbox" id="objective">
                 <label for="objective">Career Objective</label>
                 <div class="panel">
                     <p>
-                        To begin my career in a reputable organization where I can develop my skills
-                        and grow professionally and personally.
+                        To begin my career in a reputable organization where I can develop
+                        my skills and grow professionally.
                     </p>
                 </div>
             </div>
