--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <!-- Left Section -->
         <div class="left">
             <h3>Contact</h3>
-            <p>📞 7019484188</p>
-            <p>📧 shreya24287@gmail.com</p>
+            <p>📞 7019484186</p>
+            <p>📧 shreyaa4287@gmail.com</p>
             <p>📍 Bangalore – 560049</p>
 
             <h3>Languages</h3>
