--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Header -->
     <div class="header">
-        <img src="profile.Joint Photographic Experts Group File" alt="Profile Photo">
+        <img src="profile.jpeg" alt="Profile Photo">
         <h1>Shreya M</h1>
         <p>BCA Student | Cloud & Python Learner</p>
     </div>
